# zipper_app

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml
src/worker/: celery_app.py  tasks.py
src/zipper/: cli.py
